<resources>
    <string name="app_name" translatable="false">Gamer Reminder</string>
    <string name="game_mode">Game Mode</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="add_water">Add Drink</string>
    <string name="add_calories">Add Calories</string>
    <string name="notification_next">Next Notification In: %1$sm %2$ss</string>
    <string name="settings_language">Language</string>
    <string name="settings_notifications_sound">Notification Sounds</string>
    <string name="settings_notifications_min">15min</string>
    <string name="settings_notifications_max">120min</string>
    <string name="settings_notifications_frequency">Notification Frequency</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_finnish" translatable="false">Suomi</string>
    <string name="language_korean" translatable="false">한국어</string>
    <string name="language_russian" translatable="false">Pусский</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="dialog_add_message">Set the amount to add</string>
    <string name="dialog_today">Today: %1$d/%2$d</string>
    <string name="toast_not_saved">Not saved.</string>
    <string name="toast_saved">Saved successfully!</string>
    <string name="total_exercise">%1$d min</string>
    <string name="total_calories">%1$d kcal</string>
    <string name="total_water">%1$d ml</string>
    <string name="today">Today</string>
    <string name="history_list_item">%1$s - %2$d</string>
    <string name="history_average">Average: %1$d %2$s</string>
    <string name="dialog_edit_title">New value</string>
    <string name="settings_source">Sources</string>
    <string name="calories">Calories</string>
    <string name="drink">Drink</string>
    <string name="exercise">Exercise</string>
    <string name="notification_content">Remember to move and drink something!</string>
    <string name="game_mode_activated">Game Mode Activated!</string>
    <string name="game_mode_disabled">Activate Game Mode to get notifications!</string>
    <string name="settings_delete_data">Delete Userdata</string>
    <string name="appbar_title_sources">Sources</string>
    <string name="appbar_title_settings">Settings</string>
    <string name="appbar_title_history">History</string>
    <string name="appendix_water">" ml"</string>
    <string name="appendix_exercise">" min"</string>
    <string name="appendix_food">kcal</string>
    <string name="notification_frequency">Notification Frequency: %1$smin</string>
</resources>
